# tracing-perfetto

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  update.rs
examples/: threads_example.rs  tokio_example.rs
src/: idl_helpers.rs  lib.rs  perfetto.protos.rs
tests/: log.rs
