[package]
name = "tracing-perfetto"
version = "0.1.2"
edition = "2021"
authors = [ "csmoe@msn.com" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/csmoe/tracing-perfetto"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = [ "perfetto", "tracing", "subscriber", "profiling" ]
description = """
Tracing layer for recording spans and events as perfetto event format.
"""

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
chrono = "0.4.38"
prost = "0.12"
rand = "0.8.5"
thread-id = "4.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.12"
protobuf-src = "2.0.1"

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
tracing-subscriber = "0.3"
tracing = "0.1"
anyhow = "1"
