[package]
name = "tracing-perfetto"
version = "0.1.5"
edition = "2021"
authors = [ "csmoe@msn.com" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/csmoe/tracing-perfetto"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = [ "perfetto", "tracing", "subscriber", "profiling" ]
description = """
Tracing layer for recording spans and events as perfetto event format.
"""

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
chrono = "0.4.38"
prost = "0.13"
rand = "0.9"
thread-id = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
tracing-subscriber = "0.3"
tracing = "0.1"
anyhow = "1"
